# SimsSwitcher

./: .gitignore  CMakeLists.txt  FileListItemWidget.cpp  FileListItemWidget.h  [arc0.2.0]readme.md  [draft]readme.md  build_and_package.bat  exportwindow.cpp  exportwindow.h  exportwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mcccSettings.cpp  mcccSettings.h  mcccSettings.ui  readme.md  resources.qrc
.github/: FUNDING.yml
docs/Archive/: [arc0.3.0]readme.md  [arc1.0.0]readme.md  [arc1.1.1]readme.md
inc/: packsDil.csv
repository/Updates.xml/: 2025-09-05-1635_meta.7z  Updates.xml
repository/Updates.xml/com.wrenswift.simsswitcher/: 1.1.2content.7z.sha1  1.1.2generic.7z  1.1.2generic.7z.sha1  1.1.2iconengines.7z  1.1.2iconengines.7z.sha1  1.1.2icons.7z  1.1.2icons.7z.sha1  1.1.2imageformats.7z  1.1.2imageformats.7z.sha1  1.1.2inc.7z  1.1.2inc.7z.sha1  1.1.2meta.7z  1.1.2networkinformation.7z  1.1.2networkinformation.7z.sha1  1.1.2platforms.7z  1.1.2platforms.7z.sha1  1.1.2styles.7z  1.1.2styles.7z.sha1  1.1.2tls.7z  1.1.2tls.7z.sha1  1.1.2translations.7z  1.1.2translations.7z.sha1
repository/com.wrenswift.simsswitcher/1.1.2/data/inc/: packsDil.csv
repository/com.wrenswift.simsswitcher/1.1.2/meta/: installscript.qs  package.xml
repository/com.wrenswift.simsswitcher/meta/: license.txt
wiki/: mccc.md  mods.md  preset_management.md  settings.md
